--- a/views/signup.pug
+++ b/views/signup.pug
@@ -4,30 +4,22 @@ extends partials/header
 //-link to the block position in header.pug file in the partials folder in views
 block content
     h1#h1retrievingMesssage= message
-    div#retrieving_form
-        div.retrieving_form
-            h2#h1signup Sign up
-            div#line2
-            div#signup_form
-                //Insert form
-                form(method='POST' action='/signup' autocomplete='off')
-                    div.retrieve_form
-                        input.signup_input(type='text' placeholder='Username' name='username', required)
-                    div.retrieve_form
-                        input.signup_input(type='password' placeholder='Password' name='password', required)
-                    div.retrieve_form
-                        input.signup_input(type='password' placeholder='Re-Password' name='repassword', required)
-                    div.retrieve_form
-                        input.signup_input(type='email' placeholder='Email' name='email', required)
-                    div#signup_submit
-                        button#signup_submit_button(type='submit' value='signup') Sign Up
-        div.retrieving_form
-            h3#h1signup Sign up
-            div#line2
-            p#pretrievingg with Google account
-            div#signup_submit
-                h4.home_signup_button#signup_submit_button
-                    a(href="/google" class="signup_button") Google
+    div#retrieving_form_div
+        h2#h1signup Sign up
+        div#line3
+        div#signup_form
+            //Insert form
+            form(method='POST' action='/signup' autocomplete='off')
+                div.retrieve_form
+                    input.signup_input(type='text' placeholder='Username' name='username', required)
+                div.retrieve_form
+                    input.signup_input(type='password' placeholder='Password' name='password', required)
+                div.retrieve_form
+                    input.signup_input(type='password' placeholder='Re-Password' name='repassword', required)
+                div.retrieve_form
+                    input.signup_input(type='email' placeholder='Email' name='email', required)
+                div#signup_submit
+                    button#signup_submit_button(type='submit' value='signup') Sign Up
 
     //-link to the footer.pug file in the partials folder in views
     include partials/footer
