--- a/views/personal.pug
+++ b/views/personal.pug
@@ -22,7 +22,7 @@ block content
                 td= "$" + parseFloat(item.price).toFixed(2)               
                 td
                     if (item.imageName)
-                        img(src=`imageStorage/${item.imageName}` width='100px')
+                        img(src=`/imageStorage/${item.imageName}` width='100px')
                     else
                         p -
                 td
