--- a/views/show.pug
+++ b/views/show.pug
@@ -38,7 +38,7 @@ block content
                         input(type="checkbox" id="deletePic" name="deletePic")
                         label(for="deletePic") Delete image
             div#item_submit
-                button(type='submit' id="item_submit_button") Updat
+                button(type='submit' id="item_submit_button") Update
     div#item_delete_button_div
         form(method='POST' action='/delete/' + item.id)
             button(type='submit' value='Delete' id="item_submit_button") Delete
