--- a/views/show.pug
+++ b/views/show.pug
@@ -6,15 +6,17 @@ block content
     h1#h1show= message
     div#image_show_div
         if (item.imageName)
-            img#image_show(src=`../imageStorage/${item.imageName}`)
+            img#image_show(src=`../imageStorage/${item.seller}-${item.userId}/${item.imageName}`)
     br
     table
         tr
+            th SELLER
             th NAME
             th DESCRIPTION
             th PRICE
 
             tr 
+                td= item.seller
                 td= item.name
                 td= item.description
                 td= "$" + parseFloat(item.price).toFixed(2)
@@ -22,6 +24,8 @@ block content
     div#item_form
         form(method='POST' enctype='multipart/form-data' action='/update')
             div#item_input_form
+                input(type='hidden' name='seller' value=item.seller)
+                input(type='hidden' name='userId' value=user.id)
                 div.item_form 
                     input(type='text' name='name' value=item.name class='item_input' id="username")
                 div.item_form 
@@ -31,8 +35,9 @@ block content
                 div.item_form  
                     label(for='image')
                     input(type='file' name='image' value=item.image.data class='item_input' accept='image/png/jpg')
-                div.item_form
+                div.item_form  
                     input(type='hidden' name='id' value=item.id)
+
                 if (item.imageName)
                     div.item_form
                         input(type="checkbox" id="deletePic" name="deletePic")
