--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -65,48 +65,100 @@ h1 a {
     color: white;
 }
 
-#h1signup, #h1retrievingMesssage {
+#h1signup, #h1password {
     font-size: 1.2em;
     margin-left: 40%;
     margin-top: 20px;
 }
 
-#h1retrievingMesssage {
-    margin-left: 30%;
-    color: red;
+#h1password {
+    margin-left: 27%;
 }
 
-#h1retrieving, #h1show, #h1login {
+#h1retrieving, #h1show, #h1account1, #h1account2, #h1retrievingMesssage, #h1retrievingError, #h1retrievingSuccess, #h1sigupSuccess {
     font-size: 1.2em;
     margin-left: 35%;
     margin-top: 20px;
     color: red;
+    text-align: center;
+}
+
+#h1login {
+    text-align: left;
 }
 
 #h1show {
     margin-left: 20%;
 }
 
-#h1login {
-    position: relative;
-    margin-left: 80%;
-    color: #8000FF;
-    text-transform: none;
-    padding-bottom: 10px;
+#h1account1, #h1account2, #h1retrievingMesssage, #h1retrievingError, #h1retrievingSuccess {
+    margin-left: 32%;
+    color: white;
+    width: 36%;
+    background-color: red;
+    padding: 10px;
+}
+
+#h1retrievingMesssage, #h1account1 {
+    width: 50%;
+    margin-left: 25%;
+}
+
+#h1account2, #h1retrievingSuccess {
+    color: black;
+    background-color: #A5CC57;
+}
+
+#h1sigupSuccess {
+    margin-left: 25%;
+    color: black;
+    width: 50%;
+    background-color: #A5CC57;
+    padding: 10px;
 }
 
 #h2retrieving {
     font-size: 1.2em;
-    margin-left: 18.5%;
+    margin-left: 17.2%;
+}
+
+#h2account {
+    font-size: 1.2em;
+    margin-left: 27%;
+}
+
+#h4account {
+    font-size: 1.2em;
+    margin-left: 27.5%;
+}
+
+#h2retrievingp {
+    font-size: 1.2em;
+    margin-left: 24%;
+}
+
+#h2retrievingd {
+    font-size: 1.2em;
+    margin-left: 27.5%;
+}
+
+#h2retrievinga {
+    font-size: 1.2em;
+    margin-left: 29%;
 }
 
 #pretrieving {
-    margin-left: 16.8%;
+    margin-left: 13%;
     color: #483D8B;
 }
 
 #pretrievingd {
-    margin-left: 38%;
+    margin-left: 27%;
+    color: #483D8B;
+}
+
+#pretrievingp {
+    margin-left: 30%;
     color: #483D8B;
 }
 
@@ -115,12 +167,17 @@ h1 a {
     color: #483D8B;
 }
 
+#pretrievinga {
+    margin-left: 27.5%;
+    color: #483D8B;
+}
+
 #home_links {
     width: 70%;
     margin-left: 30%;
 }
 
-.home_signup_button, #home_login_button, #google_login_button {
+.home_signup_button, #home_login_button, #google_login_button, #account_button {
     font-size: 1em;
     text-align: center;
     position: relative;
@@ -140,16 +197,24 @@ h1 a {
     margin-top: 1.5px;
 }
 
+#account_button {
+    width: 100%;
+}
+
 #google_login_button {
     position: relative;
     top: 1.5px;
-    padding-right: 20px;
+    padding-right: 85px;
     padding-left: 20px;
     height: 38px;
     top: 62px;
     text-decoration: none;
     padding-bottom: 2.5px;
-    right: 15.8%;
+    right: 14.75%;
+    background-image: url(/images/google.jpg);
+    background-repeat: no-repeat;
+    background-position-x: 130px;
+    background-size: contain;
 }
 
 .home_signup_button {
@@ -165,12 +230,6 @@ h1 a {
 .home_login_button_div {
     width: 100%;
     margin-bottom: 10px;
-}
-
-#logout_button {
-    margin-top: 30PX;
-    width: 10%;
-    margin-left: 87%;
 }
 
 .home_signup_button a {
@@ -227,7 +286,6 @@ h1 a {
 #html {
     position: relative;
     margin-top: 100px;
-    margin-left: -12%;
 }
 
 #web-page-pic {
@@ -284,7 +342,7 @@ h1 a {
     border-bottom: 3px solid #483D8B;
     margin-top:10px;
     width: 90%;
-    margin-left: 7%;
+    margin-left: 10%;
 }
 
 #line3 {
@@ -301,13 +359,13 @@ h1 a {
     padding-bottom: 20px;
 }
 
-#item_submit, #signup_submit {
+#item_submit, #signup_submit, #goToMainPage {
     width: 30%;
     margin-left: 23%;
     margin-top: 50px;
 }
 
-#item_submit, #item_input_form {
+#item_submit, #item_input_form, #goToMainPage {
     margin-left: auto;
     margin-right: auto;
 }
@@ -339,7 +397,7 @@ h1 a {
     color: #483D8B;
 }
 
-#item_submit_button, #signup_submit_button, #retrieving_submit_button, #retrieving_delete {
+#item_submit_button, #signup_submit_button, #retrieving_submit_button, #retrieving_delete, #account_delete_button, #account_password_button {
     width: 100%;
     height: 36px;
     text-align: center;
@@ -366,11 +424,18 @@ h1 a {
     margin-right: auto;
 }
 
-#retrieving_submit_button, #signup_submit_button {
+#retrieving_submit_button, #signup_submit_button, #account_delete_button, #account_password_button {
     width: 120%;
     margin-left: 45%;
 }
 
+#account_delete_button {
+    margin-left: 48%;
+}
+
+#account_password_button {
+    margin-left: 52%;
+}
 #signup_submit_button {
     margin-left: 30%;
 }
@@ -402,18 +467,22 @@ h1 a {
 .retrieving_form {
     position: relative;
     float: left;
-    width: 35%;
-    padding: 5%;
+    width: 30%;
+    padding: 1%;
 }
 
-
 #retrieving_form {
-    margin-left: 10%;
+    margin-left: 3%;
 }
 
 #retrieving_form_div {
     width: 40%;
     margin-left: 30%;
+}
+
+#deleting_form_div {
+    width: 35%;
+    margin-left: 28%;
 }
 
 #signup_form {
@@ -489,14 +558,16 @@ tbody td {
     position: relative;
 }
 
-#topContainer {
-}
-
-#image_show_div {
+#image_show_div, #user_photo {
     margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     width: 30%;
+}
+
+#user_photo {
+    margin-bottom: 50px;
+    width: 10%;
 }
 
 #image_show {
@@ -505,4 +576,107 @@ tbody td {
     box-shadow: 0 0 0 15px hsl(288, 59%, 40%), 
                 0 0 0 25px hsl(288, 59%, 60%),  
                 0 0 0 45px hsl(302, 59%, 75%);
+}
+
+#logout_button {
+    height: 90PX;
+    position: relative;
+}
+
+.header_div_1 {
+    float: left;
+    left: 35%;
+    margin-left: 12%;
+}
+
+#logout_button2 {
+    width: 130%;
+    display: inline-block;
+    height: 40px;
+    margin-top: 15px;
+    height: 30px;
+    margin-left: -7.2%;
+}
+
+#h1login {
+    font-size: 1.2em;
+    text-align: center;
+    position: relative;
+    color: #8000FF;
+    text-transform: none;
+    display: inline-block;
+    left: 5%;
+    bottom: 7px;
+}
+
+#user_photo_image {
+    width: auto;
+    height: 30px;
+    display: inline-block;
+    margin-left: 9%;
+}
+
+#logout_button1, #logout_button3, #logout_button4 {
+    font-size: 1em;
+    text-align: center;
+    position: relative;
+    background-color: #483D8B;
+    text-transform: none;
+    color: white;
+    font-weight: 300;
+    padding-bottom: 3px;
+    text-decoration: none;
+    width: 10%;
+    height: 27px;
+    padding-top: 3px;
+    margin-top: 15px;
+}
+
+#logout_button3, #logout_button4 {
+    margin-top: 15px;
+}
+
+#logout_button1 a, #logout_button3 a, #logout_button4 a {
+    text-transform: none;
+    color: white;
+}
+
+#logout_button5 {
+    width: 130%;
+    display: inline-block;
+    height: 40px;
+    margin-top: 15px;
+    height: 30px;
+    margin-left: 50%;
+}
+
+.header_div_2 {
+    float: left;
+    left: 20%;
+}
+
+#logout_button4 {
+    margin-left: 25%;
+}
+
+#logout_button3 {
+    margin-left: 4%;
+}
+
+#deletePic {
+    height: 24px;
+    width: 24px;
+    margin-right: 10px;
+}
+
+#account_lable {
+    font-weight: bold;
+}
+
+#delete_google_account {
+    position: relative;
+    float: left;
+    width: 30%;
+    padding: 1%;
+    margin-left: 32%;
 }
