--- a/views/activation.pug
+++ b/views/activation.pug
@@ -5,24 +5,20 @@ extends partials/header
 block content
     if (message)
         h1#h1retrievingMesssage= message
-    if (success_message)
-        h1#h1sigupSuccess= success_message
     div#retrieving_form_div
-        h2#h1signup Sign up
+        h2#h1signup Account activation
         div#line3
         div#signup_form
             //Insert form
-            form(method='POST' action='/signup' autocomplete='off')
+            form(method='POST' action='/activation')
                 div.retrieve_form
                     input.signup_input(type='text' placeholder='Username' name='username', required)
                 div.retrieve_form
                     input.signup_input(type='password' placeholder='Password' name='password', required)
                 div.retrieve_form
-                    input.signup_input(type='password' placeholder='Re-Password' name='repassword', required)
-                div.retrieve_form
-                    input.signup_input(type='email' placeholder='Email' name='email', required)
+                    input.signup_input(type='email' placeholder='Activation code' name='code', required)
                 div#signup_submit
-                    button#signup_submit_button(type='submit' value='signup') Sign Up
+                    button#signup_submit_button(type='submit' value='active') Active
 
     //-link to the footer.pug file in the partials folder in views
     include partials/footer
