--- a/views/main.pug
+++ b/views/main.pug
@@ -3,10 +3,7 @@ extends partials/header
 
 //-link to the block position in header.pug file in the partials folder in views
 block content
-    if (message)
-        h1#h1retrievingError= message
-    if (success_message)
-        h1#h1retrievingSuccess= success_message
+    h1#h1retrieving= message 
     br
     table
         tr
@@ -17,7 +14,7 @@ block content
             th IMAGE
 
         each item in items
-            tr
+            tr 
                 td= item.seller
                 td= item.name
                 td= item.description
@@ -27,6 +24,9 @@ block content
                         img(src=`imageStorage/${item.seller}-${item.userId}/${item.imageName}` width='100px')
                     else
                         p -
+
+    div#item_submit
+        a(href='/personal' id="item_submit_button") Go to personal page
 
     //link to the footer.pug file in the partials folder in views
     include partials/footer
